testing/Travis/testcases/prototype/shouldSucceed/InterfaceRefCheck.adl
CONTEXT InterfaceRefCheck IN ENGLISH
{- Test interface ref typechecking for generalizations, failing cases are in ShouldFail/InterfaceRefCheck.adl -}

CONCEPT Peach "A fruit"
CLASSIFY Lime ISA Citrus
CLASSIFY Orange ISA Citrus
CLASSIFY Limorange IS Lime /\ Orange

INTERFACE Overview : I[ONE]
BOX [ "Citrus    as Citrus"    : V[ONE*Citrus]    INTERFACE Citrus
    , "Citrus    as Orange"    : V[ONE*Citrus]    INTERFACE Orange
    , "Citrus    as Lime"      : V[ONE*Citrus]    INTERFACE Lime
    , "Citrus    as Limorange" : V[ONE*Citrus]    INTERFACE Limorange
    , "Lime      as Citrus"    : V[ONE*Lime]      INTERFACE Citrus   
--    , "Lime      as Orange"    : V[ONE*Lime]      INTERFACE Orange -- should fail  
    , "Lime      as Lime"      : V[ONE*Lime]      INTERFACE Lime     
    , "Lime      as Limorange" : V[ONE*Lime]      INTERFACE Limorange
    , "Orange    as Citrus"    : V[ONE*Orange]    INTERFACE Citrus   
    , "Orange    as Orange"    : V[ONE*Orange]    INTERFACE Orange   
--    , "Orange    as Lime"      : V[ONE*Orange]    INTERFACE Lime   -- should fail
    , "Orange    as Limorange" : V[ONE*Orange]    INTERFACE Limorange
    , "Limorange as Citrus"    : V[ONE*Limorange] INTERFACE Citrus   
    , "Limorange as Orange"    : V[ONE*Limorange] INTERFACE Orange   
    , "Limorange as Lime"      : V[ONE*Limorange] INTERFACE Lime     
    , "Limorange as Limorange" : V[ONE*Limorange] INTERFACE Limorange
--    , "Limorange as Peach"     : V[ONE*Limorange] INTERFACE Peach  -- should fail
    ]

INTERFACE Citrus : I[Citrus]
BOX [ "dummy": I ]

INTERFACE Orange : I[Orange]
BOX [ "dummy": I ]

INTERFACE Lime : I[Lime]
BOX [ "dummy": I ]

INTERFACE Limorange : I[Limorange]
BOX [ "dummy": I ]

INTERFACE Peach : I[Peach]
BOX [ "dummy": I ]
ENDCONTEXT
